# keyvault

./: .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml  setup.cfg
keyvault/: server.py
src/keyvault/: _version.py
src/keyvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/keyvault/tests/: test_client.py
src/keyvault_llm/: _version.py
src/keyvault_llm.egg-info/: PKG-INFO  SOURCES.txt
