[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "keyvault"
authors = [{name = "Lorenzo Toscano", email = "lorenzo.toscano@github.com"}]
description = "A simple key management system for development environments"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["key management", "development", "security"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "requests",
    "waitress",
]
dynamic = ["version"]

[project.scripts]
keyvault = "keyvault.server:main"

[tool.setuptools_scm]
write_to = "src/keyvault/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "node-and-timestamp"