[metadata]
name = keyvault
author = Lorenzo Toscano
author_email = lorenzo.toscano@gmail.com
description = A simple key management system for development environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ltoscano/keyvault
project_urls =
    Bug Tracker = https://github.com/ltoscano/keyvault/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src